--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="txt">
 
         Aqours (pronunciado como "aqua") es un grupo de ídolos escolares que originalmente fue formado y dirigido por Kanan Matsuura dos años antes de desmoronarse y finalmente fue sucedido por Chika Takami en Love Live! ¡¡Sunshine!!. Eran el grupo de ídols escolares de la escuela secundaria de niñas Uranohoshi. El grupo original estaba formado por tres miembros (tercer año). El grupo reformado constaba de nueve miembros junto con todos los miembros originales. Al comienzo de la película, el grupo continúa con seis de los miembros en Seishin High School y se ve que los nuevos miembros lo reforman al final de la película.
-        <img src="img/awa.png" width="500" height="300" alt="Integrantes de Aqours">
+        <img src="img/awa.png" alt="Integrantes de Aqours" style="width:100%">
         
     </div>
 
@@ -169,7 +169,9 @@ Tsuki, un estudiante de la nueva escuela, explica que los transferidos fueron co
 
 </div>
 
-
+<audio autoplay>
+  <source src="audio/sunshain.ogg"  type="audio/ogg">
+</audio>
 
     <div id=footer class="uwu">
 
@@ -182,6 +184,8 @@ Tsuki, un estudiante de la nueva escuela, explica que los transferidos fueron co
 
 
     </div>
+
+
 
 </body>
 </html>
